--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Hello, Big, World!</h1>
     <p>Call me Alexios</p>
+    <img src="images/breaching_whale.jpg" />
   </body>
 </html>
