Add a link to the About page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Hello, Big, World!</h1>
+    <a href="about.html">About this project</a>
     <p>Call me Alexios</p>
     <img src="images/breaching_whale.jpg" />
   </body>
